--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,15 +1,40 @@
----
-title: Le Wagon - Middleman
----
-
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<div class="homewrapper">
+  <div id="home">
+    <div class="home-content">
+      <%= image_tag "logo.png", width: "250"%>
+      <div class="line"></div>
+      <div class="buttonwrapper">
+        <a href="#">Funny Snake</a>
+        <a href="#">Tiny Whale</a>
+        <a href="#">Smart Donkey</a>
+        <a href="#">Wild Pony</a>
+        <a href="#">Kind Shark</a>
+        <a href="#">Scary Spider</a>
+      </div>
+      <div class="buttonwrapper">
+        <a href="#">Mighty Duck</a>
+        <a href="#">Soaring Eagle</a>
+        <a href="#">Dancing Wolf</a>
+        <a href="#">Smiling Gator</a>
+        <a href="#">Happy Hippo</a>
+        <a href="#">Zealous Zebra</a>
+      </div>
+      <div class="buttonwrapper">
+        <a href="#">Witty Tiger</a>
+        <a href="#">Proud Lion</a>
+        <a href="#">Funny Squirrel</a>
+        <a href="#">Jolly Cheetah</a>
+        <a href="#">Fast Ostrich</a>
+        <a href="#">Black Panther</a>
+      </div>
+      <div class="buttonwrapper">
+        <a href="#">Silver Fox</a>
+        <a href="#">Cool Giraffe</a>
+        <a href="#">Fancy Bear</a>
+        <a href="#">Silly Deer</a>
+        <a href="#">Big Cat</a>
+        <a href="#">Top Dog</a>
+      </div>
+    </div>
   </div>
 </div>
