--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,10 @@
       <%= image_tag "ikeaLogo.png", height: "50"%>
     </div>
     <div class="header">Apply for the 9 week bootcamp in Helsinborg: <span> April 23rd</span> to <span>June 28th</span></div>
-    <iframe src="https://kitt.lewagon.com/camps/id:332/applications/new?background_color=%23F0F0F0&btn_background=%23FD1015&btn_color=white" frameborder="0" height="800px" width="600px"></iframe>
+    <div class="grey">
+      <iframe src="https://kitt.lewagon.com/camps/id:332/applications/new?background_color=%23F0F0F0&btn_background=%23FD1015&btn_color=white" frameborder="0" height="800px" width="600px"></iframe>
+    </div>
+
   </div>
 </div>
 
