--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -29,3 +29,11 @@
     font-weight: 600;
   }
 }
+
+.grey {
+  border-radius: 2px;
+  margin: 0 auto;
+  width: 640px;
+  background-color: #f0f0f0;
+  padding: 20px 0;
+}
